# 3-package-clouded_leopard

./: Pipfile  README.md  pyproject.toml
.github/workflows/: main.yml
examples/: demo.py
src/pypass/: __init__.py  __main__.py  passwords.py
tests/: test_passwords.py
