[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyPasser"
description = "A package built for generating passwords"
version = "1.0.0"
authors = [
  { name="Natt Hong", email="nmh6063@nyu.edu" },
  { name="Cary Ho", email="ch4049@nyu.edu" },
  { name="Hanson Huang", email = "zh3089@nyu.edu" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/swe-students-spring2026/3-package-clouded_leopard"
"Repository" = "https://github.com/swe-students-spring2026/3-package-clouded_leopard.git"
"Bug Tracker" = "https://github.com/swe-students-spring2026/3-package-clouded_leopard/issues"